# energon-os

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  agent.md  docker-compose.yml  hermes.md  package.json  rust-toolchain.toml  wrangler.jsonc
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
apps/web/: Dockerfile  next.config.ts  package.json
apps/web/app/: closing-scene.tsx  globals.css  layout.tsx  manifest.ts  page.tsx  robots.ts  sitemap.ts
apps/web/app/api/auth/[...all]/: route.ts
apps/web/app/dashboard/: billing-checkout.tsx  dashboard-analytics.tsx  dashboard-console.tsx  page.tsx
apps/web/app/llms-full.txt/: route.ts
apps/web/app/llms.txt/: route.ts
apps/web/app/login/: login-form.tsx  page.tsx
apps/web/components/dashboard/: analytics-deck.tsx  memory-atlas.tsx
apps/web/components/ui/: tabs.tsx
apps/web/lib/: analytics.ts  auth-client.ts  auth.ts  db.ts  site.ts
crates/energon-api/: Cargo.toml
crates/energon-api/src/: app.rs  chain.rs  embedding.rs  errors.rs  jwt.rs  main.rs  obsidian_vault.rs  payments.rs  secrets.rs  state.rs  x402.rs
crates/energon-api/src/middleware/: auth.rs  rate_limit.rs
crates/energon-api/src/routes/: admin.rs  audit.rs  billing.rs  claims.rs  context.rs  health.rs  memory.rs  mod.rs  orgs.rs  runtime.rs  vault.rs
crates/energon-core/: Cargo.toml
crates/energon-core/src/: audit.rs  claims.rs  context_broker.rs  context_packer.rs  errors.rs  events.rs  identity.rs  lib.rs  memory.rs  permissions.rs  retrieval.rs
crates/energon-db/: Cargo.toml
crates/energon-db/src/: audit.rs  billing.rs  claims.rs  errors.rs  event_outbox.rs  identity.rs  lib.rs  memory.rs  payments.rs  pool.rs
crates/energon-worker/: Cargo.toml
crates/energon-worker/src/: main.rs
docs/: api.md  architecture.md  crypto-payments.md  deployment.md  live-agent.md  operations.md  sdk-typescript.md  swarm-control-plane.md
migrations/: 0001_identity.sql  0002_memory.sql  0003_audit.sql  0004_scale_indexes.sql  0005_memory_promotions.sql  0006_better_auth.sql  0007_payments.sql  0008_billing_entitlements.sql  0009_event_outbox.sql  0010_claim_conflicts.sql
policies/: memory_access.cedar  schema.cedarschema
tools/: live-agent.mjs
