[package]
name = "energon-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
axum.workspace = true
energon-core = { path = "../energon-core" }
energon-db = { path = "../energon-db" }
rand = "0.8"
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
