[package]
name = "energon-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
axum.workspace = true
base64 = "0.22"
dashmap = "6.2.1"
energon-core = { path = "../energon-core" }
energon-db = { path = "../energon-db" }
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
k256 = "0.13"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
sha3 = "0.10"
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
ring = "0.17.14"
