[package]
name = "energon-db"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
energon-core = { path = "../energon-core" }
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
