[package]
name = "energon-worker"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
